change live projections into score, improved list view on livescore for both soccer and football

--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -523,7 +523,7 @@
                           <p>90.3</p>
                         </div>
                         <div class="col">
-                          <p class="tit">Live projections</p>
+                          <p class="tit">Live score</p>
                           <p>114.8</p>
                         </div>
                         <div class="col">
@@ -546,7 +546,7 @@
                     </div>
                     <div class="col-6 small-padding-live-score">
                       <div class="rank__content leaders-list">
-                        <p class="tit">Live projections</p>
+                        <p class="tit">Live score</p>
                         <p>114.8</p>
                       </div>
                     </div>
@@ -661,7 +661,7 @@
                             <th>NAME</th>
                             <th>POS</th>
                             <th>FP</th>
-                            <th>SALARY</th>
+                            <th>SCORE</th>
                             <th></th>
                           </tr>
                         </thead>
@@ -672,7 +672,7 @@
                             </td>
                             <td class="pos">G</td>
                             <td>30</td>
-                            <td>$0</td>
+                            <td>12</td>
                             <td></td>
                           </tr>
                           <tr>
@@ -681,7 +681,7 @@
                             </td>
                             <td class="pos">D</td>
                             <td>30</td>
-                            <td>$0</td>
+                            <td>12</td>
                             <td></td>
                           </tr>
                           <tr>
