--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -523,7 +523,7 @@
                           <p>90.3</p>
                         </div>
                         <div class="col">
-                          <p class="tit">Live projections</p>
+                          <p class="tit">Live score</p>
                           <p>114.8</p>
                         </div>
                         <div class="col">
@@ -546,7 +546,7 @@
                     </div>
                     <div class="col-6 small-padding-live-score">
                       <div class="rank__content leaders-list">
-                        <p class="tit">Live projections</p>
+                        <p class="tit">Live score</p>
                         <p>114.8</p>
                       </div>
                     </div>
@@ -659,55 +659,55 @@
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                                 <tr>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
-                                  <td>$0</td>
+                                  <td>12</td>
                                 </tr>
                         </tbody>
                       </table>
