--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -518,17 +518,17 @@
                   <div class="rank__stats part-of-block">
                     <div class="rank__content leaders-list">
                       <div class="row">
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">original</p>
-                          <p>90.3</p>
+                          <p class="points">90.3</p>
                         </div>
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">Live score</p>
-                          <p>114.8</p>
+                          <p class="points">114.8</p>
                         </div>
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">PMR</p>
-                          <p>360</p>
+                          <p class="points">360</p>
                         </div>
                       </div>
                     </div>
@@ -541,19 +541,19 @@
                     <div class="col-3 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">original</p>
-                        <p>90.3</p>
+                        <p class="points">90.3</p>
                       </div>
                     </div>
                     <div class="col-6 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">Live score</p>
-                        <p>114.8</p>
+                        <p class="points">114.8</p>
                       </div>
                     </div>
                     <div class="col-3 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">PMR</p>
-                        <p>360</p>
+                        <p class="points">360</p>
                       </div>
                     </div>
                   </div>
