status of playing played implemented on list view own team live scores page

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -518,17 +518,17 @@
                   <div class="rank__stats part-of-block">
                     <div class="rank__content leaders-list">
                       <div class="row">
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">original</p>
-                          <p>90.3</p>
+                          <p class="points">90.3</p>
                         </div>
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">Live score</p>
-                          <p>114.8</p>
+                          <p class="points">114.8</p>
                         </div>
-                        <div class="col">
+                        <div class="col-12">
                           <p class="tit">PMR</p>
-                          <p>360</p>
+                          <p class="points">360</p>
                         </div>
                       </div>
                     </div>
@@ -541,19 +541,19 @@
                     <div class="col-3 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">original</p>
-                        <p>90.3</p>
+                        <p class="points">90.3</p>
                       </div>
                     </div>
                     <div class="col-6 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">Live score</p>
-                        <p>114.8</p>
+                        <p class="points">114.8</p>
                       </div>
                     </div>
                     <div class="col-3 small-padding-live-score">
                       <div class="rank__content leaders-list">
                         <p class="tit">PMR</p>
-                        <p>360</p>
+                        <p class="points">360</p>
                       </div>
                     </div>
                   </div>
@@ -638,7 +638,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
+                        <h3>MY NLC2 TEAM</h3><img src="assets/img/helmet.png" alt="helmet">
                       </div>
                     </div>
                   </div>
@@ -647,6 +647,7 @@
                       <table class="table table-striped nl-team-list-table">
                         <thead>
                           <tr>
+                            <th></th>
                             <th>NAME</th>
                             <th>POS</th>
                             <th>FP</th>
@@ -656,54 +657,63 @@
                         </thead>
                         <tbody>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
                                   <td>12</td>
                                 </tr>
                                 <tr>
+                                  <td class="indicated"><span class="played indicator"></span></td>
                                   <td>Player name</td>
                                   <td class="pos">FLEX</td>
                                   <td>30</td>
