--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -649,7 +649,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/img-players.png" alt="shirt">
+                        <h3>MY NLC2 TEAM</h3><img src="assets/img/img-players.png" alt="shirt">
                       </div>
                     </div>
                   </div>
@@ -658,6 +658,7 @@
                       <table class="table table-striped nl-team-list-table">
                         <thead>
                           <tr>
+                            <th></th>
                             <th>NAME</th>
                             <th>POS</th>
                             <th>FP</th>
@@ -667,6 +668,7 @@
                         </thead>
                         <tbody>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -676,6 +678,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -685,6 +688,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -694,6 +698,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -703,6 +708,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -712,6 +718,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -721,6 +728,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -730,6 +738,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -739,6 +748,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -748,6 +758,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
@@ -757,6 +768,7 @@
                             <td></td>
                           </tr>
                           <tr>
+                            <td class="indicated"><span class="played indicator"></span></td>
                             <td> 
                               <p>Player name</p>
                             </td>
