better naming current contest

--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -239,50 +239,50 @@
                       <table class="table table-striped">
                         <tbody>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
                                 <tr>
-                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
-                                  <td>TEAM NAME LONG 111</td>
+                                  <td>Touchsdowns all day long!</td>
+                                  <td>The best NLC2 team</td>
                                   <td class="orange">114/150</td>
                                   <td>350</td>
                                 </tr>
