--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -142,12 +142,12 @@
                 </div>
               </div>
               <div class="row">
-                <button type="button" data-toggle="modal" data-target="#weekModal" class="mobile-menu dropdown">Choose Week</button>
+                <button type="button" data-toggle="modal" data-target="#weekModal" class="mobile-menu dropdown">Choose Position</button>
                 <div data-target="#carouselTop5Players" data-slide-to="0" class="mobile-menu active">
                   <div class="number">
                     <p class="rank-player-top5">1</p>
                   </div>
-                  <p>Matt Ryan1</p>
+                  <p class="name-top5">Matt Ryan1</p>
                 </div>
               </div>
               <div class="row">
@@ -155,13 +155,13 @@
                   <div class="number">
                     <p class="rank-player-top5">2</p>
                   </div>
-                  <p>Matt Ryan2</p>
+                  <p class="name-top5">Matt Ryan2</p>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="2" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-player-top5">3</p>
                   </div>
-                  <p>Matt Ryan3</p>
+                  <p class="name-top5">Matt Ryan3</p>
                 </div>
               </div>
               <div class="row">
@@ -169,13 +169,13 @@
                   <div class="number">
                     <p class="rank-player-top5">4</p>
                   </div>
-                  <p>Matt Ryan4</p>
+                  <p class="name-top5">Matt Ryan4</p>
                 </div>
                 <div data-target="#carouselTop5Players" data-slide-to="4" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-player-top5">5</p>
                   </div>
-                  <p>Matt Ryan5</p>
+                  <p class="name-top5">Matt Ryan5</p>
                 </div>
               </div>
               <div id="top5-player-content" class="tab-content">
@@ -464,7 +464,7 @@
                   <div class="number">
                     <p class="rank-manager-top5">1</p>
                   </div>
-                  <p>Matt Ryan1</p>
+                  <p class="name-top5">Matt Ryan1</p>
                 </div>
               </div>
               <div class="row">
@@ -472,13 +472,13 @@
                   <div class="number">
                     <p class="rank-manager-top5">2</p>
                   </div>
-                  <p>Matt Ryan2</p>
+                  <p class="name-top5">Matt Ryan2</p>
                 </div>
                 <div data-target="#carouselTop5Managers" data-slide-to="2" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-manager-top5">3</p>
                   </div>
-                  <p>Matt Ryan3</p>
+                  <p class="name-top5">Matt Ryan3</p>
                 </div>
               </div>
               <div class="row">
@@ -486,13 +486,13 @@
                   <div class="number">
                     <p class="rank-manager-top5">4</p>
                   </div>
-                  <p>Matt Ryan4</p>
+                  <p class="name-top5">Matt Ryan4</p>
                 </div>
                 <div data-target="#carouselTop5Managers" data-slide-to="4" class="mobile-menu active">               
                   <div class="number">
                     <p class="rank-manager-top5">5</p>
                   </div>
-                  <p>Matt Ryan5</p>
+                  <p class="name-top5">Matt Ryan5</p>
                 </div>
               </div>
               <div id="top5-manager-content" class="tab-content">
@@ -587,15 +587,15 @@
                                             <div class="col-12 no-padding">
                                               <div class="nl-team-card table-data-field">
                                                 <div class="row"> 
-                                                  <div class="col-12 orange">
+                                                  <div class="col-12 orange no-padding">
                                                     <h3>Score: 123</h3>
                                                   </div>
-                                                  <div class="col-12">
+                                                  <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-12"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -711,15 +711,15 @@
                                             <div class="col-12 no-padding">
                                               <div class="nl-team-card table-data-field">
                                                 <div class="row"> 
-                                                  <div class="col-12 orange">
+                                                  <div class="col-12 orange no-padding">
                                                     <h3>Score: 123</h3>
                                                   </div>
-                                                  <div class="col-12">
+                                                  <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-12"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -835,15 +835,15 @@
                                             <div class="col-12 no-padding">
                                               <div class="nl-team-card table-data-field">
                                                 <div class="row"> 
-                                                  <div class="col-12 orange">
+                                                  <div class="col-12 orange no-padding">
                                                     <h3>Score: 123</h3>
                                                   </div>
-                                                  <div class="col-12">
+                                                  <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-12"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -959,15 +959,15 @@
                                             <div class="col-12 no-padding">
                                               <div class="nl-team-card table-data-field">
                                                 <div class="row"> 
-                                                  <div class="col-12 orange">
+                                                  <div class="col-12 orange no-padding">
                                                     <h3>Score: 123</h3>
                                                   </div>
-                                                  <div class="col-12">
+                                                  <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-12"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -1083,15 +1083,15 @@
                                             <div class="col-12 no-padding">
                                               <div class="nl-team-card table-data-field">
                                                 <div class="row"> 
-                                                  <div class="col-12 orange">
+                                                  <div class="col-12 orange no-padding">
                                                     <h3>Score: 123</h3>
                                                   </div>
-                                                  <div class="col-12">
+                                                  <div class="col-12 no-padding">
                                                     <h3>The best NLC2 team!</h3>
                                                   </div>
                                                 </div>
                                                 <div class="row"> 
-                                                  <div class="col-12"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
+                                                  <div class="col-10"><img src="assets/img/helmet.png" alt="helmet" class="helmet"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -1199,19 +1199,19 @@
               </div>
               <script type="text/javascript">
                 $("#dropdown-in-week li a").click(function(){
-                    $(this).parents(".dropdown").find('.btn').html($(this).text() + '<i class="fa fa-caret-down"></i>');
-                    $(this).parents(".dropdown").find('.btn').val($(this).data('value'));
-                    $('#top5-manager-content .top-level-panel2').hide('tab');
-                    $($(this).attr('value')).show('tab');
+                	$(this).parents(".dropdown").find('.btn').html($(this).text() + '<i class="fa fa-caret-down"></i>');
+                	$(this).parents(".dropdown").find('.btn').val($(this).data('value'));
+                	$('#top5-manager-content .top-level-panel2').hide('tab');
+                	$($(this).attr('value')).show('tab');
                 });
                 $(".modal-content .modal-body a").click(function(){
-                    $('#top5-manager-content .top-level-panel2').hide('tab');
-                    $($(this).attr('value')).show('tab');
-                    $("h5.text-center.visible-xxs.subtitle span.week").html($(this).text());
-                    $('#weekModal').modal('hide');
+                	$('#top5-manager-content .top-level-panel2').hide('tab');
+                	$($(this).attr('value')).show('tab');
+                	$("h5.text-center.visible-xxs.subtitle span.week").html($(this).text());
+                	$('#weekModal').modal('hide');
                 });
                 $("ul#dropdown-in-week").hover(function(){
-                    $("button.btn.btn-primary").css( "box-shadow", "none" );
+                	$("button.btn.btn-primary").css( "box-shadow", "none" );
                 });
               </script>
             </div>
