added status to list view on homepage section

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1313,9 +1313,10 @@
                           </div>
                           <div class="row">
                             <div class="col-12 no-padding">
-                              <table class="table table-striped nl-team-list-table">
+                              <table class="table table-striped nl-team-list-table homepage-field">
                                 <thead>
                                   <tr>
+                                    <th></th>
                                     <th class="name-list-view">NAME</th>
                                     <th>POS</th>
                                     <th>FP</th>
@@ -1325,54 +1326,63 @@
                                 </thead>
                                 <tbody>
                                   <tr>
+                                    <td class="indicated"><span class="played indicator"></span></td>
                                     <td>Player name</td>
                                     <td class="pos">FLEX</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">K</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="playing indicator"></span></td>
                                     <td>Player name</td>
                                     <td class="pos">RB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">RB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">QB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">WR</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">WR</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="not-playing indicator"></span></td>
                                     <td>Player name</td>
                                     <td class="pos">TE</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td>Player name</td>
                                     <td class="pos">DEF</td>
                                     <td>30</td>
