--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -1373,9 +1373,10 @@
                           </div>
                           <div class="row">
                             <div class="col-12 no-padding">
-                              <table class="table table-striped nl-team-list-table">
+                              <table class="table table-striped nl-team-list-table homepage-field">
                                 <thead>
                                   <tr>
+                                    <th></th>
                                     <th>NAME</th>
                                     <th>POS</th>
                                     <th>FP</th>
@@ -1385,6 +1386,7 @@
                                 </thead>
                                 <tbody>
                                   <tr>
+                                    <td class="indicated"><span class="played indicator"></span></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1394,6 +1396,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1403,6 +1406,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1412,6 +1416,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="played indicator"></span></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1421,6 +1426,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="playing indicator"></span></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1430,6 +1436,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1439,6 +1446,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="not-played indicator"></span></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1448,6 +1456,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1457,6 +1466,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1466,6 +1476,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td class="indicated"><span class="not-playing indicator"></span></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
@@ -1475,6 +1486,7 @@
                                     <td>$0</td>
                                   </tr>
                                   <tr>
+                                    <td></td>
                                     <td> 
                                       <p>Player name</p>
                                       <p class="gametime">RMA-BAR 3:00PM</p>
