--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fixes.css">
   </head>
   <body>
     <header class="nl-header-log">
