--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fixes.css">
   </head>
   <body class="sp">
     <!--include _partials/preloader.jade-->
