--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/fixes.css">
   </head>
   <body>
     <!--include _partials/preloader.jade-->
