improved top 5 menu items borders and font-sizes, updates text in FAQ

--- a/markup/_dist/faq.html
+++ b/markup/_dist/faq.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingThree" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree" class="collapsed">why use no limit coin</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree" class="collapsed">Why use No Limit Coin</a></h5>
                   </div>
                   <div id="collapseThree" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
@@ -139,7 +139,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingFour" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour" class="collapsed">what is proof of stake? how do I stake nlc2?</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour" class="collapsed">What is Proof of Stake? How do I stake NLC2?</a></h5>
                   </div>
                   <div id="collapseFour" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
@@ -149,7 +149,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingFive" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive" class="collapsed">why is no limit sports better than its competitors?</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive" class="collapsed">Why is No Limit Fantasy Sports better than its competitors?</a></h5>
                   </div>
                   <div id="collapseFive" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingSix" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix" class="collapsed">fantasy sports as it was meant to be- pure & fair</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix" class="collapsed">Fantasy Sports as it was meant to be pure & fair</a></h5>
                   </div>
                   <div id="collapseSix" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="card">
                   <div role="tab" id="headingSeven" class="card-header">
-                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven" class="collapsed">sounds awesome, what contests are you running?</a></h5>
+                    <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="true" aria-controls="collapseSeven" class="collapsed">Sounds awesome, what contests are you running?</a></h5>
                   </div>
                   <div id="collapseSeven" role="tabpanel" aria-labelledby="headingOne" class="collapse">
                     <div class="card-block">
