Horizontal scroller implentation

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -108,7 +108,7 @@
           <div class="row top-bar-live-scores">
             <div class="col-12 col-lg-6 offset-lg-0 col-xl-8">
               <h5 class="d-inline-block component-header">Matches</h5>
-              <div class="matches rounded-corners">
+              <div class="matches rounded-corners nl-table-horizontal-scroll">
                 <div class="matches__scrollarea">
                         <div class="matches__result">
                           <div class="matches__content">
